# calcs-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env-db-example  env_example  pyproject.toml  wsgi.py
application/endpoints/: __init__.py  balances_api.py  blueprint.py  expenses_api.py  profile_api.py  revenues_api.py  user_api.py
application/input_ports/: person.py  user.py
application/output_ports/: user_and_person_created.py
application/parsers/: user.py
application/ports/: user.py
application/requests/: balance.py  expenses.py  mixins.py  revenues.py  user.py
application/responses/: login_response.py  user_and_person_created.py
application/services/: __init__.py  person_service.py  token_required_service.py  user_service.py
calculations/adapters/exceptions/: date_hour.py
calculations/adapters/orms/: mappers.py  orm_accounts.py  orm_balance.py  orm_base.py  orm_expenses.py  orm_persons.py  orm_revenues.py  orm_users.py
calculations/adapters/types/: basic_types.py  date_hour.py
calculations/domain/aggregates/: balance.py
calculations/domain/entities/: accounts.py  expenses.py  models.py  person.py  revenues.py  user.py
calculations/domain/exceptions/: date_hour.py
calculations/domain/value_object/: expense_category.py  format.py  revenue_category.py
calculations/repository/: base.py  sql.py
calculations/repository/users/: user_repo.py
infrastructure/config/: configuration_objects.py
infrastructure/database/: sql_session.py
infrastructure/database/migrations/: env.py
infrastructure/database/orms/: mappers.py  orm_accounts.py  (+6 more)
infrastructure/migrations/: env.py
libs/types/: date_hour.py  identifiers.py
tests/: conftest.py
tests/domain/: test_consistency.py  test_models.py
tests/services/: test_expenses_profile.py  test_profile_service.py
(+43 files in other folders)
