[tool.poetry]
name = "calculates"
version = "0.1.0"
description = "Calculate Expenses and Revenues"
authors = ["Joao Victor <jvpereirarocha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
psycopg2 = "^2.9.3"
alembic = "^1.7.7"
SQLAlchemy = "^1.4.35"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
isort = "^5.10.1"
black = "^22.3.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
