[tool.poetry]
name = "calcs-tracker"
version = "0.1.0"
description = "Expense and Incomes Tracker"
authors = ["Joao Victor <jvpereirarocha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.10"
Flask = "^2.3.1"
Flask-JWT = "^0.3.2"
python-dotenv = "^1.0.0"
celery = "^5.2.7"
redis = "^4.5.4"
psycopg = "^3.1.8"
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
